--- a/Assignment01.ipynb
+++ b/Assignment01.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,9 +98,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files already downloaded and verified\n",
+      "Files already downloaded and verified\n"
+     ]
+    }
+   ],
    "source": [
     "# cifar10 transform\n",
     "transform_cifar10_train = transforms.Compose([\n",
@@ -137,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,9 +170,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ConvNet(\n",
+       "  (conv1): Conv2d(3, 4, kernel_size=(3, 3), stride=(1, 1))\n",
+       "  (pool): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "  (conv2): Conv2d(4, 8, kernel_size=(3, 3), stride=(1, 1))\n",
+       "  (fc1): Linear(in_features=288, out_features=32, bias=True)\n",
+       "  (fc2): Linear(in_features=32, out_features=10, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model = ConvNet()\n",
     "model.to(device)"
@@ -178,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,19 +230,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "##################### Write your answer here ##################\n",
     "# Define the loss function\n",
-    "criterion = \n",
+    "criterion = nn.CrossEntropyLoss()\n",
     "###############################################################"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,8 +261,8 @@
     "    \"\"\"\n",
     "    \n",
     "    ##################### Write your answer here ##################\n",
-    "    output = \n",
-    "    loss = \n",
+    "    output = model(image)\n",
+    "    loss = criterion(output,target)\n",
     "    ###############################################################\n",
     "\n",
     "    return output, loss"
@@ -244,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,8 +290,8 @@
     "    \"\"\"\n",
     "\n",
     "    ##################### Write your answer here ##################\n",
-    "    output = \n",
-    "    loss = \n",
+    "    output = model(image)\n",
+    "    loss = criterion(output,target)\n",
     "    ###############################################################\n",
     "\n",
     "    return output, loss"
@@ -413,8 +439,8 @@
     "# predict_label is the index (or label) of the class with the highest probability from the probabilities.\n",
     "###############################################################\n",
     "\n",
-    "probabilities = \n",
-    "predict_label = "
+    "probabilities = nn.Softmax(dim=1)(model(input))\n",
+    "predict_label = np.argmax(probabilities)"
    ]
   },
   {
