--- a/Assignment01.ipynb
+++ b/Assignment01.ipynb
@@ -623,8 +623,16 @@
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
-    "from transformers import ViTFeatureExtractor, ViTForImageClassification\n",
-    "from torch.utils.data import DataLoader"
+    "import torch.optim as optim\n",
+    "import torchvision.transforms as transforms\n",
+    "import torchvision.datasets as datasets\n",
+    "from torch.utils.data import DataLoader\n",
+    "from torch.utils.data import random_split\n",
+    "from torch.utils.data import Dataset\n",
+    "import timm\n",
+    "import os\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -642,32 +650,16 @@
     }
    ],
    "source": [
-    "# custom_dataset = YourCustomDataset()\n",
-    "# train_dataloader = DataLoader(custom_dataset, batch_size=64, shuffle=True)\n",
-    "\n",
-    "transform_cifar10_train = transforms.Compose([\n",
-    "    transforms.RandomCrop(32, padding=4),\n",
-    "    transforms.RandomHorizontalFlip(),\n",
-    "    transforms.ToTensor(),\n",
-    "    transforms.Normalize((0.4914, 0.4822, 0.4465), (0.2023, 0.1994, 0.2010)),\n",
-    "])\n",
-    "\n",
-    "transform_cifar10_test = transforms.Compose([\n",
-    "    transforms.ToTensor(),\n",
-    "    transforms.Normalize((0.4914, 0.4822, 0.4465), (0.2023, 0.1994, 0.2010)),\n",
-    "])\n",
-    "\n",
-    "train_set = torchvision.datasets.CIFAR10(root='../data', train=True,\n",
-    "                                        download=True, transform=transform_cifar10_train)\n",
-    "train_dataloader = torch.utils.data.DataLoader(train_set, batch_size=BATCH_SIZE,\n",
-    "                                          shuffle=True, num_workers=2)\n",
-    "\n",
-    "test_set = torchvision.datasets.CIFAR10(root='../data', train=False,\n",
-    "                                       download=True, transform=transform_cifar10_test)\n",
-    "test_dataloader = torch.utils.data.DataLoader(test_set, batch_size=BATCH_SIZE,\n",
-    "                                         shuffle=False, num_workers=2)\n",
-    "\n",
-    "class_names = ['airplane', 'automobile', 'bird', 'cat', 'deer', 'dog', 'frog', 'horse', 'ship', 'truck']\n"
+    "learning_rate = 1e-03\n",
+    "train_batch_size = 32\n",
+    "eval_batch_size = 32\n",
+    "seed = 42\n",
+    "gradient_accumulation_steps = 4\n",
+    "total_train_batch_size = 128\n",
+    "optimizer = 'Adam'\n",
+    "lr_scheduler_type = 'linear'\n",
+    "lr_scheduler_warmup_ratio = 0.1\n",
+    "num_epochs = 1"
    ]
   },
   {
@@ -685,13 +677,12 @@
     }
    ],
    "source": [
-    "# Load the pretrained ViT model\n",
-    "feature_extractor = ViTFeatureExtractor.from_pretrained('google/vit-base-patch16-224')\n",
-    "ViT = ViTForImageClassification.from_pretrained('google/vit-base-patch16-224')\n",
-    "\n",
-    "# Define a loss function and optimizer\n",
-    "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = torch.optim.Adam(ViT.parameters(), lr=0.001)"
+    "torch.manual_seed(seed)\n",
+    "torch.cuda.manual_seed(seed)\n",
+    "torch.cuda.manual_seed_all(seed)\n",
+    "np.random.seed(seed)\n",
+    "torch.backends.cudnn.deterministic = True\n",
+    "torch.backends.cudnn.benchmark = False"
    ]
   },
   {
@@ -700,31 +691,136 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fine-tuning loop\n",
-    "num_epochs = 10\n",
-    "for epoch in range(num_epochs):\n",
-    "    for inputs, labels in train_dataloader:\n",
-    "        optimizer.zero_grad()\n",
-    "        \n",
-    "        # Extract features using the feature extractor\n",
-    "        inputs = feature_extractor(images=inputs, return_tensors=\"pt\")\n",
-    "        \n",
-    "        # Forward pass through the ViT model\n",
-    "        outputs = ViT(**inputs)\n",
-    "        logits = outputs.logits\n",
-    "        \n",
-    "        # Calculate loss\n",
-    "        loss = criterion(logits, labels)\n",
-    "        \n",
-    "        # Backpropagation and optimization\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
+    "resize_size = 224  # 模型期望的输入尺寸\n",
     "\n",
-    "    # Print training statistics (optional)\n",
-    "    print(f'Epoch [{epoch + 1}/{num_epochs}] - Loss: {loss.item()}')\n",
+    "transform_cifar10_train = transforms.Compose([\n",
+    "    transforms.RandomCrop(32, padding=4),\n",
+    "    transforms.RandomHorizontalFlip(),\n",
+    "    transforms.Resize((resize_size, resize_size)),  # 调整图像大小\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize((0.4914, 0.4822, 0.4465), (0.2023, 0.1994, 0.2010)),\n",
+    "])\n",
     "\n",
-    "# Save the fine-tuned model\n",
-    "ViT.save_pretrained(\"fine_tuned_vit\")\n"
+    "transform_cifar10_test = transforms.Compose([\n",
+    "    transforms.Resize((resize_size, resize_size)),  # 调整图像大小\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize((0.4914, 0.4822, 0.4465), (0.2023, 0.1994, 0.2010)),\n",
+    "])\n",
+    "\n",
+    "\n",
+    "train_set = datasets.CIFAR10(root='../data', train=True, download=True, transform=transform_cifar10_train)\n",
+    "train_loader = DataLoader(train_set, batch_size=train_batch_size, shuffle=True, num_workers=2)\n",
+    "\n",
+    "test_set = datasets.CIFAR10(root='../data', train=False, download=True, transform=transform_cifar10_test)\n",
+    "test_loader = DataLoader(test_set, batch_size=eval_batch_size, shuffle=False, num_workers=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import subprocess\n",
+    "import os\n",
+    "\n",
+    "result = subprocess.run('bash -c \"source /etc/network_turbo && env | grep proxy\"', shell=True, capture_output=True, text=True)\n",
+    "output = result.stdout\n",
+    "for line in output.splitlines():\n",
+    "    if '=' in line:\n",
+    "        var, value = line.split('=', 1)\n",
+    "        os.environ[var] = value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = timm.create_model('vit_base_patch16_224_in21k', pretrained=True, num_classes=10)  \n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model.to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "criterion = nn.CrossEntropyLoss().to(device)\n",
+    "\n",
+    "if optimizer == 'Adam':\n",
+    "    optimizer = optim.Adam(model.parameters(), lr=learning_rate, betas=(0.9, 0.999), eps=1e-08)\n",
+    "else:\n",
+    "    raise ValueError(\"Optimizer not supported\")\n",
+    "\n",
+    "if lr_scheduler_type == 'linear':\n",
+    "    num_steps = len(train_loader) * num_epochs\n",
+    "    warmup_steps = int(num_steps * lr_scheduler_warmup_ratio)\n",
+    "    lr_scheduler = optim.lr_scheduler.LambdaLR(\n",
+    "        optimizer,\n",
+    "        lr_lambda=lambda step: min((step + 1) / warmup_steps, 1.0),\n",
+    "    )\n",
+    "else:\n",
+    "    raise ValueError(\"Learning rate scheduler not supported\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train 之前的准备\n",
+    "\n",
+    "def evaluate(model, test_loader):\n",
+    "    model.eval()\n",
+    "    total_correct = 0\n",
+    "    total_samples = 0\n",
+    "    total_loss = 0\n",
+    "    with torch.no_grad():\n",
+    "        for inputs, targets in test_loader:\n",
+    "            inputs = inputs.to(device)\n",
+    "            targets = targets.to(device)\n",
+    "            outputs = model(inputs)\n",
+    "            loss = criterion(outputs, targets)\n",
+    "            _, predicted = outputs.max(1)\n",
+    "            total_correct += predicted.eq(targets).sum().item()\n",
+    "            total_samples += targets.size(0)\n",
+    "            total_loss += loss.item()\n",
+    "    accuracy = total_correct / total_samples\n",
+    "    avg_loss = total_loss / len(test_loader)\n",
+    "    return avg_loss, accuracy\n",
+    "\n",
+    "def train(model, train_loader, optimizer, criterion, num_epochs):\n",
+    "    model.train()\n",
+    "    total_steps = len(train_loader)\n",
+    "    for epoch in range(num_epochs):\n",
+    "        for step, (inputs, targets) in enumerate(train_loader):\n",
+    "            optimizer.zero_grad()\n",
+    "            inputs = inputs.to(device)\n",
+    "            targets = targets.to(device)\n",
+    "            outputs = model(inputs)\n",
+    "            loss = criterion(outputs, targets)\n",
+    "            loss.backward()\n",
+    "            if (step + 1) % gradient_accumulation_steps == 0:\n",
+    "                optimizer.step()\n",
+    "            if (step + 1) % 10 == 0:  # 每10个小批次打印一次\n",
+    "                print(f\"Training Loss: {loss.item():.4f}\\tEpoch: {epoch+1}\\tStep: {step+1}\")\n",
+    "            validation_loss, accuracy = evaluate(model, test_loader)\n",
+    "            print(f\"Test Loss: {validation_loss:.4f}\\tAccuracy: {100 * accuracy:.2f}%\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Training\n",
+    "train(model, train_loader, optimizer, criterion, num_epochs)"
    ]
   },
   {
