--- a/Assignment01.ipynb
+++ b/Assignment01.ipynb
@@ -819,6 +819,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "checkpoint_dir = \"ViT_checkpoint\"\n",
+    "os.makedirs(checkpoint_dir, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Training\n",
     "train(model, train_loader, optimizer, criterion, num_epochs)"
    ]
@@ -998,7 +1009,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "2022.10.0"
   }
  },
  "nbformat": 4,
