--- a/Assignment01.ipynb
+++ b/Assignment01.ipynb
@@ -809,8 +809,20 @@
     "                optimizer.step()\n",
     "            if (step + 1) % 10 == 0:  # 每10个小批次打印一次\n",
     "                print(f\"Training Loss: {loss.item():.4f}\\tEpoch: {epoch+1}\\tStep: {step+1}\")\n",
-    "            validation_loss, accuracy = evaluate(model, test_loader)\n",
-    "            print(f\"Test Loss: {validation_loss:.4f}\\tAccuracy: {100 * accuracy:.2f}%\")\n"
+    "                # 保存模型检查点\n",
+    "                if (step + 1) % save_checkpoint_interval == 0:\n",
+    "                    checkpoint_path = os.path.join(checkpoint_dir, f'model_checkpoint_epoch{epoch+1}_step{step+1}.pt')\n",
+    "                    torch.save({\n",
+    "                        'epoch': epoch,\n",
+    "                        'step': step,\n",
+    "                        'model_state_dict': model.state_dict(),\n",
+    "                        'optimizer_state_dict': optimizer.state_dict(),\n",
+    "                        'loss': loss,\n",
+    "                    }, checkpoint_path)\n",
+    "                    print(f\"Saved checkpoint at {checkpoint_path}\")\n",
+    "                 # 每个 10小batch 结束后评估模型\n",
+    "                validation_loss, accuracy = evaluate(model, test_loader)\n",
+    "                print(f\"Test Loss: {validation_loss:.4f}\\tAccuracy: {100 * accuracy:.2f}%\")\n"
    ]
   },
   {
