--- a/Assignment01.ipynb
+++ b/Assignment01.ipynb
@@ -773,6 +773,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "checkpoint_dir = \"ViT_checkpoint\"\n",
+    "os.makedirs(checkpoint_dir, exist_ok=True)\n",
+    "\n",
+    "# 定义保存检查点的步骤间隔和最大保存数量\n",
+    "save_checkpoint_interval = 1  # 每一步保存一个检查点\n",
+    "max_saved_checkpoints = 5  # 最多保存最后五个检查点\n",
+    "\n",
+    "# 初始检查点列表\n",
+    "saved_checkpoints = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Train 之前的准备\n",
     "\n",
     "def evaluate(model, test_loader):\n",
@@ -820,20 +838,18 @@
     "                        'loss': loss,\n",
     "                    }, checkpoint_path)\n",
     "                    print(f\"Saved checkpoint at {checkpoint_path}\")\n",
-    "                 # 每个 10小batch 结束后评估模型\n",
+    "                    \n",
+    "                    # 将检查点路径添加到列表中\n",
+    "                    saved_checkpoints.append(checkpoint_path)\n",
+    "                    \n",
+    "                    # 检查并删除旧的检查点\n",
+    "                    if len(saved_checkpoints) > max_saved_checkpoints:\n",
+    "                        old_checkpoint = saved_checkpoints.pop(0)\n",
+    "                        os.remove(old_checkpoint)\n",
+    "                        print(f\"Removed old checkpoint: {old_checkpoint}\")\n",
+    "                # 每个小batch结束后，评估模型并打印结果\n",
     "                validation_loss, accuracy = evaluate(model, test_loader)\n",
     "                print(f\"Test Loss: {validation_loss:.4f}\\tAccuracy: {100 * accuracy:.2f}%\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "checkpoint_dir = \"ViT_checkpoint\"\n",
-    "os.makedirs(checkpoint_dir, exist_ok=True)"
    ]
   },
   {
