--- a/Assignment01.ipynb
+++ b/Assignment01.ipynb
@@ -847,9 +847,9 @@
     "                        old_checkpoint = saved_checkpoints.pop(0)\n",
     "                        os.remove(old_checkpoint)\n",
     "                        print(f\"Removed old checkpoint: {old_checkpoint}\")\n",
-    "                # 每个小batch结束后，评估模型并打印结果\n",
-    "                validation_loss, accuracy = evaluate(model, test_loader)\n",
-    "                print(f\"Test Loss: {validation_loss:.4f}\\tAccuracy: {100 * accuracy:.2f}%\")\n"
+    "                if (step + 1) % 100 == 0:  # 每100个小批次打印一次\n",
+    "                    validation_loss, accuracy = evaluate(model, test_loader)\n",
+    "                    print(f\"Test Loss: {validation_loss:.4f}\\tAccuracy: {100 * accuracy:.2f}%\")\n"
    ]
   },
   {
@@ -860,6 +860,50 @@
    "source": [
     "# Training\n",
     "train(model, train_loader, optimizer, criterion, num_epochs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "checkpoint_path = '/root/autodl-tmp/STA303-Assignment01/ViT_checkpoint/D:A1STA303-Assignment01checkpoint/autodl-tmp/STA303-Assignment01/ViT_checkpoint/D:A1STA303-Assignment01checkpoint/model_checkpoint_epoch1_step1520.pt'  \n",
+    "checkpoint = torch.load(checkpoint_path)\n",
+    "\n",
+    "model.load_state_dict(checkpoint['model_state_dict'])\n",
+    "optimizer.load_state_dict(checkpoint['optimizer_state_dict'])\n",
+    "epoch = checkpoint['epoch']\n",
+    "step = checkpoint['step']\n",
+    "loss = checkpoint['loss']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class_names = ['airplane', 'automobile', 'bird', 'cat', 'deer', 'dog', 'frog', 'horse', 'ship', 'truck']\n",
+    "\n",
+    "inputs, classes = next(iter(test_loader))\n",
+    "input = inputs[0]\n",
+    "input = input.to(device)\n",
+    "output = model(input.unsqueeze(0))\n",
+    "probabilities = torch.softmax(output, dim=1)\n",
+    "predict_label = torch.argmax(probabilities)\n",
+    "predicted_class = class_names[predict_label.item()]\n",
+    "predicted_probability = probabilities[0, predict_label].item()\n",
+    "\n",
+    "image = input.cpu().numpy().transpose((1, 2, 0))\n",
+    "plt.imshow(image)\n",
+    "plt.text(17, 30, f'Predicted Class: {predicted_class}\\nProbability: {predicted_probability:.2f}', \n",
+    "            color='white', backgroundcolor='black', fontsize=8)\n",
+    "plt.show()\n",
+    "\n",
+    "# Print probabilities for each class\n",
+    "print('Print probabilities for each class:')\n",
+    "[print(f'{class_names[i]}: {probabilities[0, i].item():.4f}') for i in range(len(class_names))]"
    ]
   },
   {
@@ -1037,7 +1081,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "2022.10.0"
+   "version": "0.0.0"
   }
  },
  "nbformat": 4,
