--- a/Assignment01.ipynb
+++ b/Assignment01.ipynb
@@ -691,18 +691,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "resize_size = 224  # 模型期望的输入尺寸\n",
+    "resize_size = 224  \n",
     "\n",
     "transform_cifar10_train = transforms.Compose([\n",
     "    transforms.RandomCrop(32, padding=4),\n",
     "    transforms.RandomHorizontalFlip(),\n",
-    "    transforms.Resize((resize_size, resize_size)),  # 调整图像大小\n",
+    "    transforms.Resize((resize_size, resize_size)),  \n",
     "    transforms.ToTensor(),\n",
     "    transforms.Normalize((0.4914, 0.4822, 0.4465), (0.2023, 0.1994, 0.2010)),\n",
     "])\n",
     "\n",
     "transform_cifar10_test = transforms.Compose([\n",
-    "    transforms.Resize((resize_size, resize_size)),  # 调整图像大小\n",
+    "    transforms.Resize((resize_size, resize_size)),  \n",
     "    transforms.ToTensor(),\n",
     "    transforms.Normalize((0.4914, 0.4822, 0.4465), (0.2023, 0.1994, 0.2010)),\n",
     "])\n",
@@ -777,11 +777,9 @@
     "checkpoint_dir = \"ViT_checkpoint\"\n",
     "os.makedirs(checkpoint_dir, exist_ok=True)\n",
     "\n",
-    "# 定义保存检查点的步骤间隔和最大保存数量\n",
-    "save_checkpoint_interval = 1  # 每一步保存一个检查点\n",
-    "max_saved_checkpoints = 5  # 最多保存最后五个检查点\n",
+    "save_checkpoint_interval = 100  \n",
+    "max_saved_checkpoints = 5  \n",
     "\n",
-    "# 初始检查点列表\n",
     "saved_checkpoints = []"
    ]
   },
@@ -858,7 +856,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Training\n",
     "train(model, train_loader, optimizer, criterion, num_epochs)"
    ]
   },
@@ -901,7 +898,6 @@
     "            color='white', backgroundcolor='black', fontsize=8)\n",
     "plt.show()\n",
     "\n",
-    "# Print probabilities for each class\n",
     "print('Print probabilities for each class:')\n",
     "[print(f'{class_names[i]}: {probabilities[0, i].item():.4f}') for i in range(len(class_names))]"
    ]
@@ -1081,7 +1077,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "0.0.0"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
