--- a/Assignment01.ipynb
+++ b/Assignment01.ipynb
@@ -112,7 +112,6 @@
     }
    ],
    "source": [
-    "# cifar10 transform\n",
     "transform_cifar10_train = transforms.Compose([\n",
     "    transforms.RandomCrop(32, padding=4),\n",
     "    transforms.RandomHorizontalFlip(),\n",
@@ -681,18 +680,18 @@
     }
    ],
    "source": [
-    "resize_size = 224  \n",
+    "resize_size = 224  # 模型期望的输入尺寸\n",
     "\n",
     "transform_cifar10_train = transforms.Compose([\n",
     "    transforms.RandomCrop(32, padding=4),\n",
     "    transforms.RandomHorizontalFlip(),\n",
-    "    transforms.Resize((resize_size, resize_size)),  \n",
+    "    transforms.Resize((resize_size, resize_size)),  # 调整图像大小\n",
     "    transforms.ToTensor(),\n",
     "    transforms.Normalize((0.4914, 0.4822, 0.4465), (0.2023, 0.1994, 0.2010)),\n",
     "])\n",
     "\n",
     "transform_cifar10_test = transforms.Compose([\n",
-    "    transforms.Resize((resize_size, resize_size)),  \n",
+    "    transforms.Resize((resize_size, resize_size)),  # 调整图像大小\n",
     "    transforms.ToTensor(),\n",
     "    transforms.Normalize((0.4914, 0.4822, 0.4465), (0.2023, 0.1994, 0.2010)),\n",
     "])\n",
@@ -1088,16 +1087,10 @@
     "checkpoint_dir = \"/root/autodl-tmp/STA303-Assignment01/ViT_checkpoint\"\n",
     "os.makedirs(checkpoint_dir, exist_ok=True)\n",
     "\n",
-<<<<<<< HEAD
-    "save_checkpoint_interval = 100  \n",
-    "max_saved_checkpoints = 5  \n",
-    "\n",
-=======
     "\n",
     "save_checkpoint_interval = 1  \n",
     "max_saved_checkpoints = 5  \n",
     "\n",
->>>>>>> 27e6edd81c5267e1d90cbb07abde0b36e3fc12e6
     "saved_checkpoints = []"
    ]
   },
@@ -1657,6 +1650,7 @@
     }
    ],
    "source": [
+    "# Training\n",
     "train(model, train_loader, optimizer, criterion, num_epochs)"
    ]
   },
@@ -1744,6 +1738,7 @@
     "            color='white', backgroundcolor='black', fontsize=8)\n",
     "plt.show()\n",
     "\n",
+    "# Print probabilities for each class\n",
     "print('Print probabilities for each class:')\n",
     "[print(f'{class_names[i]}: {probabilities[0, i].item():.4f}') for i in range(len(class_names))]"
    ]
@@ -1923,11 +1918,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-<<<<<<< HEAD
-   "version": "3.9.13"
-=======
    "version": "3.10.8"
->>>>>>> 27e6edd81c5267e1d90cbb07abde0b36e3fc12e6
   }
  },
  "nbformat": 4,
